<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/recycler_location"
            style="@style/recycler"
            android:text="@string/funtional"
            />

        <TextView
            android:id="@+id/recycler_equipement"
            style="@style/recycler"
            android:text="@string/equpiment"
            />
        <TextView
            android:id="@+id/recycler_work"
            style="@style/recycler"
            android:text="@string/center"
            />

        <TextView
            android:id="@+id/recycler_description"
            style="@style/recycler"
            android:text="@string/description"
            />
    </LinearLayout>



</LinearLayout>